--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Музыкальный Плейлист</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Подключаем шрифт Ubuntu -->
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <div class="container">
-        <h1>Слушайте два плейлиста одновременно</h1>
+    <!-- Фоновое изображение -->
+    <div class="background-image">
+        <!-- Заголовок на странице -->
+        <div class="header">
+            <h1>ЗАГОЛОВОК</h1>
+        </div>
+    </div>
 
+    <!-- Текст для главной страницы -->
+    <div class="main-text">
+        <p>ТЕКСТ ДЛЯ ГЛАВНОЙ СТРАНИЦЫ</p>
+    </div>
+
+    <!-- Плееры -->
+    <div class="players">
         <!-- Плеер SoundCloud -->
         <h2>Плейлист SoundCloud</h2>
         <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/ID_ПЛЕЙЛИСТА&color=%23ff5500&auto_play=true" frameborder="0" allow="autoplay"></iframe>
