--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="background-image">
         <!-- Заголовок на странице -->
         <div class="header">
-            <h1>ЗАГОЛОВОК</h1>
+            <h1>ПОСВА</h1>
         </div>
     </div>
 
