--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="background-image">
         <!-- Заголовок на странице -->
         <div class="header">
-            <h1>ПОСВА</h1>
+            <h1>the voices</h1>
         </div>
     </div>
 
     <!-- Текст для главной страницы -->
     <div class="main-text">
-        <p>ТЕКСТ ДЛЯ ГЛАВНОЙ СТРАНИЦЫ</p>
+        <p>of universe</p>
     </div>
 
     <!-- Плееры -->
