--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="players">
         <!-- Плеер SoundCloud -->
         <h2>Плейлист SoundCloud</h2>
-        <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/ID_ПЛЕЙЛИСТА&color=%23ff5500&auto_play=true" frameborder="0" allow="autoplay"></iframe>
+        <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/listening-to&color=%23ff5500&auto_play=true" frameborder="0" allow="autoplay"></iframe>
 
         <!-- Плеер с Яндекс.Диска -->
         <h2>Ваши аудиофайлы</h2>
