--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Музыкальный Плейлист</title>
+    <title>the voices</title>
     <link rel="stylesheet" href="style.css">
     <!-- Подключаем шрифт Ubuntu -->
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
@@ -26,11 +26,11 @@
     <!-- Плееры -->
     <div class="players">
         <!-- Плеер SoundCloud -->
-        <h2>Плейлист SoundCloud</h2>
+        <h2>tap play here</h2>
         <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/5281179&color=%23ff5500&auto_play=true" frameborder="0" allow="autoplay"></iframe>
 
         <!-- Плеер с Яндекс.Диска -->
-        <h2>Ваши аудиофайлы</h2>
+        <h2>and here</h2>
         <audio controls>
             <source src="https://disk.yandex.ru/d/ID_ФАЙЛА?name=название_файла.mp3" type="audio/mp3">
             Ваш браузер не поддерживает элемент audio.
