--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </audio>
 
         <!-- Кнопки для переключения файлов -->
-        <button id="prevBtn">Предыдущее</button>
-        <button id="nextBtn">Следующее</button>
+        <button id="prevBtn">Назад</button>
+        <button id="nextBtn">Вперёд</button>
 
         <script>
             // Массив с публичными ссылками на аудиофайлы с Яндекс.Диска
