--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <!-- Плеер для переключения между файлами -->
         <audio id="audioPlayer" controls>
-            <source id="audioSource" type="audio/mp3">
+            <source id="audioSource" type="audio/wav">
             Ваш браузер не поддерживает элемент audio.
         </audio>
 
