--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <!-- Плеер для переключения между файлами -->
         <audio id="audioPlayer" controls>
-            <source id="audioSource" type="audio/wav">
+            <source id="audioSource" type="audio/mp3">
             Ваш браузер не поддерживает элемент audio.
         </audio>
 
@@ -45,10 +45,10 @@
         <script>
             // Массив с публичными ссылками на аудиофайлы с Яндекс.Диска
             const audioFiles = [
-                "https://disk.yandex.ru/d/u-4UZx4jaLIKsA?stream=1", 
-                "https://disk.yandex.ru/d/jW7_TQYM5iGkCQ?stream=1", 
-                "https://disk.yandex.ru/d/rPuuTxcYDpKv0w?stream=1"
-                "https://disk.yandex.ru/d/UfdhP7a8oGPKGA?stream=1"
+                "https://disk.yandex.ru/d/F4nTa0Lo3cqayQ?stream=1", 
+                "https://disk.yandex.ru/d/Yb73w-WUaQFMZA?stream=1", 
+                "https://disk.yandex.ru/d/HwNiNMU6901XjA?stream=1"
+                "https://disk.yandex.ru/d/wIpp1Ory5EczgQ?stream=1"
                 "https://disk.yandex.ru/d/ID_ФАЙЛА_5?stream=1"
                 "https://disk.yandex.ru/d/ID_ФАЙЛА_6?stream=1"
                 "https://disk.yandex.ru/d/ID_ФАЙЛА_7?stream=1"
