--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>tap play here</h2>
         <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/5281179&color=%23ff5500&auto_play=true" frameborder="0" allow="autoplay"></iframe>
 
-        <!-- Плеер с iBroadcast -->
+        <!-- Плеер с GitHub -->
         <h2>and here</h2>
 
         <!-- Плеер для переключения между файлами с автозапуском -->
@@ -43,13 +43,13 @@
         <button id="nextBtn">Следующее</button>
 
         <script>
-            // Массив с публичными ссылками на аудиофайлы с iBroadcast
+            // Массив с публичными ссылками на аудиофайлы из репозитория GitHub
             const audioFiles = [
-                "https://www.ibroadcast.com/track/ID_ФАЙЛА_1", // Замените на прямую ссылку на файл
-                "https://www.ibroadcast.com/track/ID_ФАЙЛА_2", // Замените на прямую ссылку на файл
-                "https://www.ibroadcast.com/track/ID_ФАЙЛА_3", // Замените на прямую ссылку на файл
-                "https://www.ibroadcast.com/track/ID_ФАЙЛА_4", // Замените на прямую ссылку на файл
-                "https://www.ibroadcast.com/track/ID_ФАЙЛА_5"  // Замените на прямую ссылку на файл
+                "https://raw.githubusercontent.com/yumi909/posva2024/1.mp3", 
+                "https://raw.githubusercontent.com/yumi909/posva2024/2.mp3", 
+                "https://raw.githubusercontent.com/yumi909/posva2024/3.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/4.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/5.mp3"
             ];
 
             let currentIndex = 0;
