--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
     <div class="players">
         <!-- Плеер SoundCloud -->
         <h2>tap play here</h2>
-        <iframe id="soundcloudPlayer" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/5281179&color=%23ff5500&auto_play=true" frameborder="0" allow="autoplay"></iframe>
-
-        <!-- Кнопки для переключения на следующий и предыдущий трек SoundCloud -->
-        <button id="prevSoundCloud">Предыдущее</button>
-        <button id="nextSoundCloud">Следующее</button>
+        <iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/5281179&color=%23ff5500&auto_play=true" frameborder="0" allow="autoplay"></iframe>
 
         <!-- Плеер с GitHub -->
         <h2>and here</h2>
@@ -41,10 +37,6 @@
             <source id="audioSource" type="audio/mp3">
             Ваш браузер не поддерживает элемент audio.
         </audio>
-
-        <!-- Шкала регулировки громкости -->
-        <label for="volumeControl">Громкость:</label>
-        <input id="volumeControl" type="range" min="0" max="1" step="0.1" value="1">
 
         <!-- Кнопки для переключения файлов -->
         <button id="prevBtn">Предыдущее</button>
@@ -77,7 +69,7 @@
                 audioPlayer.play(); // Автоматически начинаем воспроизведение
             }
 
-            // Слушатели событий для кнопок переключения для GitHub
+            // Слушатели событий для кнопок переключения
             document.getElementById("prevBtn").addEventListener("click", () => {
                 currentIndex = getRandomIndex(); // Переключаем на случайный файл
                 loadAudio();
@@ -90,39 +82,6 @@
 
             // Инициализация плеера с случайным файлом и автозапуском
             loadAudio();
-
-            // Слушатель для регулировки громкости
-            document.getElementById("volumeControl").addEventListener("input", function() {
-                const audioPlayer = document.getElementById("audioPlayer");
-                audioPlayer.volume = this.value; // Устанавливаем громкость
-            });
-
-            // Управление плеером SoundCloud
-            const soundCloudPlayer = document.getElementById("soundcloudPlayer");
-            let soundCloudPlaylist = [
-                "https://api.soundcloud.com/tracks/123456", // Пример трека, замените на актуальные
-                "https://api.soundcloud.com/tracks/789012",
-                "https://api.soundcloud.com/tracks/345678"
-            ];
-
-            let currentSoundCloudIndex = 0;
-
-            // Функция для смены трека в SoundCloud
-            function switchSoundCloudTrack() {
-                soundCloudPlayer.src = `https://w.soundcloud.com/player/?url=${soundCloudPlaylist[currentSoundCloudIndex]}&color=%23ff5500&auto_play=true`;
-            }
-
-            // Слушатели для кнопок переключения на следующий и предыдущий трек SoundCloud
-            document.getElementById("prevSoundCloud").addEventListener("click", () => {
-                currentSoundCloudIndex = (currentSoundCloudIndex - 1 + soundCloudPlaylist.length) % soundCloudPlaylist.length;
-                switchSoundCloudTrack();
-            });
-
-            document.getElementById("nextSoundCloud").addEventListener("click", () => {
-                currentSoundCloudIndex = (currentSoundCloudIndex + 1) % soundCloudPlaylist.length;
-                switchSoundCloudTrack();
-            });
-
         </script>
     </div>
 
