--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Текст для главной страницы -->
     <div class="main-text">
-        <p>of universe</p>
+        <p>of kordon</p>
     </div>
 
     <!-- Плееры -->
