--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="players">
-        <!-- Новый SoundCloud плеер -->
+        <!-- SoundCloud плеер -->
         <h2>tap play here</h2>
         <iframe src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/everythingdies/sets/catfest-2022&color=%23ff5500&auto_play=true" frameborder="0" allow="autoplay"></iframe>
 
@@ -32,8 +32,8 @@
         </audio>
 
         <!-- Кнопки для переключения -->
-        <button id="prevBtn">Предыдущее</button>
-        <button id="nextBtn">Следующее</button>
+        <button id="prevBtn">туда</button>
+        <button id="nextBtn">сюда</button>
 
         <script>
             const audioFiles = [
@@ -102,7 +102,7 @@
     </div>
 
     <footer>
-        <p>TG: <a href="https://t.me/D.YMSHV" target="_blank">D.YMSHV</a></p>
+        <p><a href="https://t.me/D.YMSHV" target="_blank">TG: D.YMSHV</a></p>
     </footer>
 
 </body>
