--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="players">
         <!-- SoundCloud плеер -->
-        <h2>tap play here</h2>
+        <h2>tap play here (listen in browser)</h2>
         <iframe src="https://w.soundcloud.com/player/?url=https%3A//soundcloud.com/everythingdies/sets/catfest-2022&color=%23ff5500&auto_play=true" frameborder="0" allow="autoplay"></iframe>
 
         <!-- Плеер для аудиофайлов из репозитория GitHub -->
