--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </audio>
 
         <!-- Кнопки для переключения -->
-        <button id="prevBtn">туда</button>
-        <button id="nextBtn">сюда</button>
+        <button id="prevBtn">назад</button>
+        <button id="nextBtn">вперёд</button>
 
         <script>
             const audioFiles = [
@@ -56,7 +56,42 @@
                 "https://raw.githubusercontent.com/yumi909/posva2024/main/17.mp3",
                 "https://raw.githubusercontent.com/yumi909/posva2024/main/18.mp3",
                 "https://raw.githubusercontent.com/yumi909/posva2024/main/19.mp3",
-                "https://raw.githubusercontent.com/yumi909/posva2024/main/20.mp3"
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/20.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/21.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/22.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/23.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/24.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/25.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/26.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/27.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/28.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/28.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/30.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/31.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/32.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/33.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/34.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/35.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/36.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/37.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/38.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/39.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/40.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/41.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/42.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/43.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/44.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/45.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/46.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/47.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/48.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/49.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/50.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/51.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/52.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/53.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/54.mp3",
+                "https://raw.githubusercontent.com/yumi909/posva2024/main/55.mp3"
             ];
 
             let playedFiles = [];
